--- a/style.css
+++ b/style.css
@@ -507,7 +507,7 @@ span {
 
 .childSkill img {
     top: 3rem;
-    width: 10vw;
+    width: 9vw;
 }
 
 .parentSkills_1 div,
@@ -529,6 +529,7 @@ span {
     background-color: var(--second-bg-color);
     border: 3px solid var(--main-color);
     transition: 0.3s ease-in-out;
+    min-width: 10vw;
 }
 
 .childSkill:hover{
@@ -550,20 +551,42 @@ span {
     color: var(--main-color);
 }
 
-.all_skills {
-    /* display: flex; */
-    /* justify-content: center; */
-    /* overflow-x: hidden; */
+.skill_name {
+    display: flex;
+    flex-direction: column;
+    justify-self: start;
+    writing-mode: vertical-lr;
 }
+
+.all_skills {
+    display: flex;
+}
+
 
 .one_skill {
-    max-width: 100vw;
+    display: flex;
 }
 
-.contact {
+.end {
     padding: 100px 15px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
     background: var(--second-bg-color);
 }
+
+.back-link {
+    font-size: 4rem;
+    text-align: center;
+    margin: 2rem 0;
+    color: var(--trim-color);
+}
+
+/* #mic {
+    max-height: 30vh;
+    max-width: 10vh;
+} */
 
 
 /* 20:24 https://www.youtube.com/watch?v=UqHILyzcULE */
