--- a/style.css
+++ b/style.css
@@ -537,6 +537,7 @@ span {
     flex-direction: column;
     justify-self: start;
     writing-mode: vertical-lr;
+    transform: rotate(180deg);
 }
 
 .all_skills {
